# copy

./: CMakeLists.txt  PKGBUILD  README.md
src/file/: CMakeLists.txt
src/main/: CMakeLists.txt
src/progress/: CMakeLists.txt  progress.c
